# SurfPanel

./: .gitignore  CMakeLists.txt  Makefile  README.md  installer.iss
config/: test.toml
config/cache/: compiled.toml
config/defaults/: items.toml
config/profiles/: default.profile.toml
src/: action_manager.cpp  action_manager.h  config.cpp  config.h  item.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_fluent.qss  resources.qrc  search_engine.cpp  search_engine.h
tests/: CMakeLists.txt  test_action_manager.cpp  test_config.cpp  test_harness.h  test_mainwindow.cpp  test_search_engine.cpp
